[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "centra_contracts"
version = "1.0.0"
authors = [
  { name="Yuriy Vasylenko", email="ivasylen@akamai.com" },
]
description = "Centra contracts package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/guardicore/contracts"
Issues = "https://github.com/guardicore/contracts/issues"
